--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
-html,
 body {
-  padding: 0px;
-  margin: 0px;
+  background-color: papayawhip;
+  margin: 12pt;
 }
 
 #grid-container {
   display: grid;
-  grid-gap: 4px;
+  grid-gap: 2px;
   background-color: brown;
-  padding: 4px;
+  padding: 2px;
 }
 
-#grid-container > div {
+#grid-container > * {
   background-color: papayawhip;
   text-align: center;
   font-size: 24pt;
@@ -43,4 +42,16 @@ body {
 }
 #footer {
   grid-area: footer;
+}
+
+#image {
+  margin: 0pt;
+}
+
+#image > img {
+  height: 100%;
+  width: 100%;
+  max-width: max-content;
+  max-height: max-content;
+  object-fit: contain;
 }
