--- a/layouts/medium.css
+++ b/layouts/medium.css
@@ -1,8 +1,6 @@
 video,
 #social,
-#blank,
-#wide-image,
-#narrow-image {
+#blank {
   display: none;
 }
 
@@ -41,6 +39,5 @@ video,
 }
 
 #image > img {
-  min-height: 66vh;
-  max-height: 66vh;
+  height: 55vh;
 }
