--- a/layouts/wide.css
+++ b/layouts/wide.css
@@ -4,21 +4,21 @@ video {
 
 #grid-container {
   height: 150vh;
-  grid-template-columns: 1fr 1200px;
+  grid-template-columns: 1fr 250px 1000px 1fr;
   grid-template-rows:
-    600px /*   header image */
-    0.25fr /*  aside  menu */
-    0.75fr /*  aside  subscribe */
-    1.75fr /*  aside  main */
-    2.5fr /*   blank  main */
-    0.75fr; /* footer footer */
+    600px /*   margin-l header image */
+    0.25fr /*  margin-l aside  menu */
+    0.75fr /*  margin-l aside  subscribe */
+    1.75fr /*  margin-l aside  main */
+    2.5fr /*   margin-l blank  main */
+    0.75fr; /* margin-l footer footer */
   grid-template-areas:
-    "header image"
-    "aside  menu"
-    "aside  subscribe"
-    "aside  main"
-    "blank  main"
-    "footer footer";
+    "margin-l header image     margin-r"
+    "margin-l aside  menu      margin-r"
+    "margin-l aside  subscribe margin-r"
+    "margin-l aside  main      margin-r"
+    "margin-l blank  main      margin-r"
+    "margin-l footer footer    margin-r";
 }
 
 header {
