--- a/layouts/wide.css
+++ b/layouts/wide.css
@@ -4,7 +4,7 @@ video {
 
 #grid-container {
   height: 150vh;
-  grid-template-columns: 1fr 250px 1000px 1fr;
+  grid-template-columns: 1fr 240px 1000px 1fr;
   grid-template-rows:
     600px /*   margin-l header image */
     0.25fr /*  margin-l aside  menu */
@@ -23,7 +23,7 @@ video {
 
 header {
   display: grid;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 240px 1fr;
   grid-template-areas:
     "logo"
     "nav";
@@ -40,4 +40,20 @@ header {
 #longcap {
   font-size: 24pt;
   bottom: 10%;
+}
+
+nav {
+  margin-left: auto;
+  margin-right: auto;
+}
+nav > ul {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  height: 100%;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+nav li {
+  grid-template-columns: 60px 1fr;
+  align-items: center;
+  gap: 8pt;
 }
