--- a/style.css
+++ b/style.css
@@ -109,8 +109,10 @@ nav > ul {
 }
 nav li {
   display: grid;
+  /* background-color: cyan; */
 }
-/* 
-.nav-text{
-    background-color: aqua;
-} */
+
+a {
+  text-decoration: none;
+  color: initial;
+}
