--- a/layouts/narrow.css
+++ b/layouts/narrow.css
@@ -1,28 +1,31 @@
 video,
 aside,
 #blank,
-#menu {
+#menu,
+.nav-icon {
   display: none;
 }
 
 #grid-container {
   height: 300vh;
+  grid-template-columns: 1fr 400px 1fr;
   grid-template-rows:
-    0.25fr /* nav */
-    0.75fr /* logo */
-    2fr /*    image */
+    1fr /*    header */
+    300px /*    image */
     0.5fr /*  subscribe */
     8fr /*    main */
     0.5fr; /* footer */
   grid-template-areas:
-    "nav"
-    "logo"
-    "image"
-    "subscribe"
-    "main"
-    "footer";
+    "margin-l header margin-r"
+    "margin-l image margin-r"
+    "margin-l subscribe margin-r"
+    "margin-l main margin-r"
+    "margin-l footer margin-r";
 }
-
+#image > img {
+  height: 100%;
+  object-fit: cover;
+}
 #main {
   grid-template-rows: 1fr 1fr 1fr 1fr;
 }
@@ -33,15 +36,42 @@ aside,
   padding: initial;
 }
 #shortcap {
-  font-size: 21pt;
-  bottom: 29px;
+  font-size: 14pt;
+  bottom: 19px;
 }
 
 #longcap {
-  font-size: 18pt;
+  font-size: 12pt;
   bottom: 0;
 }
 
 #image > img {
-  height: 50vh;
+  /* height: 100%; */
+  width: 100%;
+}
+
+header {
+  display: grid;
+  grid-template-columns: 1fr 200px 1fr;
+  grid-template-rows: 1fr 200px;
+  grid-template-areas:
+    "nav nav nav"
+    "margin-l logo margin-r";
+}
+
+nav {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+nav > ul {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+nav li {
+  gap: 8pt;
+}
+
+.nav-icon > img {
+  height: 40px;
+  width: 40px;
 }
