--- a/layouts/medium.css
+++ b/layouts/medium.css
@@ -7,10 +7,10 @@ aside,
 
 #grid-container {
   height: 150vh;
-  grid-template-columns: 1fr 670px 1fr;
+  grid-template-columns: 1fr min(70vh, 90vw) 1fr;
   grid-template-rows:
-    200px /*  header */
-    469px /*  image */
+    20vh /*  header */
+    42vh /*  image */
     0.5fr /* menu */
     0.75fr /* subscribe */
     4.5fr /*  main */
@@ -26,7 +26,7 @@ aside,
 }
 header {
   display: grid;
-  grid-template-columns: 200px 1fr;
+  grid-template-columns: 20vh 1fr;
   grid-template-areas: "logo nav";
 }
 #main {
@@ -34,19 +34,13 @@ header {
 }
 
 #shortcap {
-  font-size: 21pt;
-  bottom: calc(10% + 41px);
+  font-size: 3.5vh;
+  bottom: calc(10% + 4.5vh);
 }
 
 #longcap {
-  font-size: 18pt;
+  font-size: 2.625vh;
   bottom: 10%;
-}
-
-#image > img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 nav {
@@ -56,7 +50,11 @@ nav {
 nav > ul {
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-
 nav li {
-  gap: 8pt;
+  gap: 6pt;
+}
+
+.nav-icon > img {
+  height: 5.5vh;
+  width: 5.5vh;
 }
