--- a/layouts/wide.css
+++ b/layouts/wide.css
@@ -5,9 +5,9 @@ video,
 
 #grid-container {
   height: 150vh;
-  grid-template-columns: 1fr 220px 1000px 1fr;
+  grid-template-columns: 1fr min(25vh, 20vw) min(100vh, 75vw) 1fr;
   grid-template-rows:
-    600px /*   margin-l header image */
+    60vh /*   margin-l header image */
     0.5fr /*  margin-l aside  menu */
     0.75fr /*  margin-l aside  subscribe */
     1.75fr /*  margin-l aside  main */
@@ -24,7 +24,7 @@ video,
 
 header {
   display: grid;
-  grid-template-rows: 220px 1fr;
+  grid-template-rows: min(25vh, 20vw) 1fr;
   grid-template-areas:
     "logo"
     "nav";
@@ -35,12 +35,12 @@ header {
 }
 
 #shortcap {
-  font-size: 28pt;
-  bottom: calc(10% + 55px);
+  font-size: 4vh;
+  bottom: calc(10% + 5.1vh);
 }
 
 #longcap {
-  font-size: 24pt;
+  font-size: 3vh;
   bottom: 10%;
 }
 
@@ -55,7 +55,6 @@ nav > ul {
   grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 nav li {
-  grid-template-columns: 60px 1fr;
+  grid-template-columns: 10vh 1fr;
   align-items: center;
-  gap: 8pt;
 }
