--- a/style.css
+++ b/style.css
@@ -60,7 +60,11 @@ aside {
   display: inline-block;
   position: relative;
 }
-
+#image > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 #main {
   display: grid;
 }
@@ -93,11 +97,12 @@ aside {
   margin: auto;
 }
 .nav-icon > img {
-  height: 50px;
-  width: 50px;
+  height: 6vh;
+  width: 6vh;
   display: block;
 }
 nav {
+  font-size: 2vh;
   margin-left: 12pt;
   margin-right: 12pt;
 }
