--- a/layouts/narrow.css
+++ b/layouts/narrow.css
@@ -59,7 +59,6 @@ nav > ul {
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.nav-icon > img {
-  height: 40px;
-  width: 40px;
+nav {
+  font-size: 2.2vh;
 }
