--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body {
   background-color: papayawhip;
+  margin-top: 24pt;
 }
 
 #grid-container {
   display: grid;
-  grid-gap: 2px;
+  /* grid-gap: 2px;
   background-color: brown;
-  padding: 2px;
+  padding: 2px; */
 }
 
 #grid-container > * {
@@ -63,7 +64,7 @@ aside {
 #image > img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 #main {
   display: grid;
@@ -71,7 +72,7 @@ aside {
 
 #main > div {
   border: 1pt solid black;
-  margin: 12pt;
+  margin: 6pt;
   padding: 6pt;
 }
 
@@ -97,12 +98,12 @@ aside {
   margin: auto;
 }
 .nav-icon > img {
-  height: 6vh;
-  width: 6vh;
+  height: 40pt;
+  width: 40pt;
   display: block;
 }
 nav {
-  font-size: 2vh;
+  font-size: 14pt;
   margin-left: 12pt;
   margin-right: 12pt;
 }
@@ -113,7 +114,10 @@ nav > ul {
 nav li {
   display: grid;
 }
-
+nav li:hover {
+  background-color: cyan;
+  border-radius: 25%;
+}
 a {
   text-decoration: none;
   color: initial;
