--- a/style.css
+++ b/style.css
@@ -87,11 +87,13 @@ aside {
 }
 #shortcap {
   background-color: white;
+  font-size: 3vw;
 }
 
 #longcap {
   background-color: brown;
   color: white;
+  font-size: 2vw;
 }
 
 .nav-icon {
