--- a/layouts/wide.css
+++ b/layouts/wide.css
@@ -43,6 +43,7 @@ header {
 }
 
 nav {
+  font-size: 14pt;
   margin-left: auto;
   margin-right: auto;
 }
@@ -55,4 +56,9 @@ nav > ul {
 nav li {
   grid-template-columns: 10vh 1fr;
   align-items: center;
+}
+
+.nav-icon > img {
+  height: 36pt;
+  width: 36pt;
 }
