Revert "scale caption font to vw"
This reverts commit 614e4a322e95ceed3acd9bac5dc0fccf679e3d3f.

--- a/layouts/wide.css
+++ b/layouts/wide.css
@@ -35,10 +35,12 @@ header {
 }
 
 #shortcap {
-  bottom: calc(10% + 36pt);
+  font-size: 24pt;
+  bottom: calc(10% + 31pt);
 }
 
 #longcap {
+  font-size: 18pt;
   bottom: 10%;
 }
 
