--- a/style.css
+++ b/style.css
@@ -2,14 +2,15 @@ body {
   background-color: papayawhip;
   margin-top: 24pt;
 }
-
+.center-text {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+}
 #grid-container {
   display: grid;
-  /* grid-gap: 2px;
-  background-color: brown;
-  padding: 2px; */
 }
-
 #grid-container > * {
   background-color: papayawhip;
   text-align: center;
@@ -55,6 +56,7 @@ aside {
   background-color: brown;
   margin: 10%;
   border-radius: 50%;
+  font-size: 200%;
 }
 #image {
   margin: 0pt;
@@ -64,7 +66,7 @@ aside {
 #image > img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 #main {
   display: grid;
@@ -110,12 +112,29 @@ nav > ul {
 }
 nav li {
   display: grid;
+  /* background-color: cyan; */
 }
-nav li:hover {
-  background-color: cyan;
-  border-radius: 25%;
+nav li:hover,
+.menu-item:hover {
+  background-color: brown;
+  border-radius: 0%;
 }
 a {
   text-decoration: none;
   color: initial;
+}
+a:hover {
+  text-decoration: underline;
+  color: white;
+}
+
+#menu {
+  display: grid;
+  gap: 2pt;
+  background-color: brown;
+  border: 2pt solid brown;
+  grid-template-columns: repeat(4, 1fr);
+}
+.menu-item {
+  background-color: cyan;
 }
