--- a/layouts/wide.css
+++ b/layouts/wide.css
@@ -49,20 +49,21 @@ nav {
   margin-left: auto;
   margin-right: auto;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 4fr 1fr;
   grid-template-areas: "nav nav-margin";
 }
-nav > ul {
+#nav-container {
   margin: 0;
   height: 100%;
   grid-template-rows: 1fr 1fr 1fr 1fr;
 }
-nav li {
+#nav-container > a {
+  display: grid;
   grid-template-columns: 10vh 1fr;
   align-items: center;
 }
 
-.nav-icon > img {
+.nav-icon {
   height: 4vw;
   width: 4vw;
 }
