--- a/layouts/narrow.css
+++ b/layouts/narrow.css
@@ -34,15 +34,14 @@ aside,
   padding: initial;
 }
 #shortcap {
-  font-size: 16pt;
-  bottom: 20px;
-}
+  font-size: 2.5vw;
+  bottom: 4%;
+}   
 
 #longcap {
-  font-size: 12pt;
-  bottom: 0;
+  font-size: 2vw;
+  bottom: 0%;
 }
-
 header {
   display: grid;
   grid-template-columns: 1fr 40vw 1fr;
