--- a/style.css
+++ b/style.css
@@ -151,7 +151,9 @@ aside {
 }
 
 #subscribe {
+  border-top: 1px dotted black;
   display: grid;
+  border-bottom: 1px dotted black;
 }
 #subscribe > * {
   margin: auto;
