--- a/layouts/wide.css
+++ b/layouts/wide.css
@@ -7,19 +7,23 @@ video,
   height: 100vw;
   grid-template-columns: 1fr 20vw 70vw 1fr;
   grid-template-rows:
-    42vw /*    header image */
-    0.25fr /*   aside  menu */
-    0.5fr /*  aside  subscribe */
-    1.5fr /*  aside  main */
-    1.5fr /*   blank  main */
-    0.5fr; /* footer footer */
+    42vw /* header image */
+    1fr /*  aside  menu */
+    1fr /*  margin margin */
+    2fr /*  aside  subscribe */
+    1fr/*   margin margin */
+    6fr /*  aside  main */
+    6fr /*  blank  main */
+    2fr; /* footer footer */
   grid-template-areas:
-    "margin-l header image     margin-r"
-    "margin-l header  menu      margin-r"
-    "margin-l aside  subscribe margin-r"
-    "margin-l aside  main      margin-r"
-    "margin-l blank  main      margin-r"
-    "margin-l footer footer    margin-r";
+    "margin-l header image            margin-r"
+    "margin-l header menu             margin-r"
+    "margin-l aside  subscribe-top    margin-r"
+    "margin-l aside  subscribe        margin-r"
+    "margin-l aside  subscribe-bottom margin-r"
+    "margin-l aside  main             margin-r"
+    "margin-l blank  main             margin-r"
+    "margin-l footer footer           margin-r";
 }
 
 header {
@@ -84,6 +88,6 @@ nav {
   font-size: 16pt;
 }
 
-input{
-    font-size: 13pt;
+input {
+  font-size: 13pt;
 }
