--- a/layouts/medium.css
+++ b/layouts/medium.css
@@ -1,7 +1,8 @@
 video,
 aside,
 #blank,
-.logo-margin {
+.logo-margin,
+#block-credit {
   display: none;
 }
 
@@ -33,15 +34,11 @@ header {
   grid-template-columns: 20vw 1fr;
   grid-template-areas: "logo nav";
 }
-#main {
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-}
 
 #shortcap {
   font-size: 2.5vw;
   bottom: 22%;
 }
-
 #longcap {
   font-size: 2vw;
   bottom: 15%;
@@ -78,7 +75,10 @@ nav {
 #subscribe > img {
   height: 34pt;
 }
-
 #subscribe > p {
   font-size: 13pt;
+}
+
+#main {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
